--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,25 @@
         "bin/gendiff"
     ],
     "require": {
-        "docopt/docopt": "^1.0"
+        "docopt/docopt": "^1.0",
+        "funct/funct": "^1.5",
+        "symfony/yaml": "^5.2"
     },
     "autoload":{
         "files": [
-            "src/cli.php"
+            "src/Differ.php",
+            "src/Formatters.php",
+            "src/Formatters/Json.php",
+            "src/Formatters/Plain.php",
+            "src/Formatters/Stylish.php",
+            "src/Parsers.php"
             ]
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.5",
+        "phpunit/phpunit": "^9.5",
+        "phpstan/phpstan": "^0.12.76",
+        "mikey179/vfsstream": "^1.6",
+        "hexlet/phpstan-fp": "^1.1"
     }
 }
