--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,12 @@
     "autoload":{
         "psr-4": { "Php\\Project\\Lvl2\\": "tests/" },
         "files": [
-            "src/gendiff.php",
-            "src/parsers.php",
-            "src/cli.php",
-            "src/Formatters/pretty.php",
-            "src/Formatters/plain.php",
-            "src/Formatters/json.php"
+            "src/Differ.php",
+            "src/Formatter.php",
+            "src/Parsers.php",
+            "src/Formatters/Pretty.php",
+            "src/Formatters/Plain.php",
+            "src/Formatters/Json.php"
             ]
     },
     "require-dev": {
@@ -36,9 +36,7 @@
         "hexlet/phpstan-fp": "^1.1"
     },
     "scripts": {
-        "phpcs": "phpcs",
-        "phpcbf": "phpcbf",
         "phpunit": "phpunit",
-        "test": "phpunit tests"
+        "phpcs": "phpcs"
     }
 }
