--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,14 @@
     "autoload":{
         "psr-4": { "Php\\Project\\Lvl2\\": "tests/" },
         "files": [
-            "src/Differ.php",
-            "src/Formatter.php",
+            "src/DiffGenerator.php",
+            "src/Parsers/JsonParser.php",
+            "src/Parsers/YamlParser.php",
             "src/Parsers.php",
-            "src/Formatters/Pretty.php",
+            "src/Formatters/Stylish.php",
             "src/Formatters/Plain.php",
-            "src/Formatters/Json.php"
+            "src/Formatters/Json.php",
+            "src/Formatters.php"
             ]
     },
     "require-dev": {
