--- a/tests/fixtures/after.yaml
+++ b/tests/fixtures/after.yaml
@@ -1,8 +1,7 @@
----
-common:
+ommon:
   follow: false
   setting1: Value 1
-  setting3:
+  setting3: null
   setting4: blah blah
   setting5:
     key5: value5
@@ -16,7 +15,7 @@ group1:
   baz: bars
   nest: str
 group3:
+  fee: 100500
   deep:
     id:
       number: 45
-  fee: 100500
